v2.4.x/site/en/userGuide/schema/analyzer/filter/length-filter.md
---
id: length-filter.md
title: Length​ Filter
summary: "The `length` filter removes tokens that do not meet specified length requirements, allowing you to control the length of tokens retained during text processing.​"
---

# Length​

The `length` filter removes tokens that do not meet specified length requirements, allowing you to control the length of tokens retained during text processing.​

## Configuration

The `length` filter is a custom filter in Milvus, specified by setting `"type": "length"` in the filter configuration. You can configure it as a dictionary within the `analyzer_params` to define length limits.​

```python
analyzer_params = {​
    "tokenizer": "standard",​
    "filter":[{​
        "type": "length", # Specifies the filter type as length​
        "max": 10, # Sets the maximum token length to 10 characters​
    }],​
}​
```

The `length` filter accepts the following configurable parameters.​

<table data-block-token="A4b8dsBito2lFHxJ9dxck6M5nJv"><thead><tr><th data-block-token="JXZbdUMSyoJb5ZxhdLGcxGE2nEh" colspan="1" rowspan="1"><p data-block-token="Id41dwlZjoLnGCxWpKJcDg0Hnyf">Parameter​</p>

</th><th data-block-token="MvZqdxMSxowjEBxCQNzcxS8TnVd" colspan="1" rowspan="1"><p data-block-token="OsHjdVSvKodZ5Ox3U1KcXbYQnBc">Description​</p>

</th></tr></thead><tbody><tr><td data-block-token="ZuZEdNiHIotOFTx3m9QcTPnWnle" colspan="1" rowspan="1"><p data-block-token="Dszdd3IDdowj5bxJyJhcP19tnng"><code>max</code>​</p>

</td><td data-block-token="Fx30ddBWYoyRhmxK34Kcgn1Ynjb" colspan="1" rowspan="1"><p data-block-token="MizvdmrQ2oycDjxNYrXcWqFtnXb">Sets the maximum token length. Tokens longer than this length are removed.​</p>

</td></tr></tbody></table>

The `length` filter operates on the terms generated by the tokenizer, so it must be used in combination with a tokenizer.

After defining `analyzer_params`, you can apply them to a `VARCHAR` field when defining a collection schema. This allows Milvus to process the text in that field using the specified analyzer for efficient tokenization and filtering. For details, refer to [Example use](analyzer-overview.md#Example-use).​

## Example output

Here’s an example of how the `length` filter processes text:​

**Example text**:​

```python
"The length filter allows control over token length requirements for text processing."​
```

**Expected output** (with `max: 10`):​

```python
["length", "filter", "allows", "control", "over", "token", "length", "for", "text"]​
```